--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,8 +2,8 @@
 {% block title %}Flasky{% endblock %}
 {% block head %}
 {{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static',filename = 'favicon.ico') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static',filename = 'favicon.ico') }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
 {% endblock %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -23,9 +23,9 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
             {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('auth.logout') }}">登出</li>
+                <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
             {% else %}
-                <li><a href="{{ url_for('auth.login') }}">登录</li>
+                <li><a href="{{ url_for('auth.login') }}">登录</a></li>
             {% endif %}
             </ul>
         </div>
@@ -36,7 +36,7 @@
 {% block content %}
 <div class="container">
 {% for message in get_flashed_messages() %}
-<div class=“alert alert-warnig”>
+<div class="alert alert-warnig">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     {{ message }}
 </div>
