--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,11 +20,14 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a> </li>
+                <li><a href="{{ url_for('main.user',username=current_user.username) }}">Profile</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('main.user',username=current_user.username) }}">Profile</a></li>
                 <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
             {% else %}
+                <li><a href="{{ url_for('main.user',username=current_user.username) }}">Profile</a></li>
                 <li><a href="{{ url_for('auth.login') }}">登录</a></li>
             {% endif %}
             </ul>
